--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Feel free to go yell at the <a href="https://twitter.com/nrupsis">developer on Twitter</a></p>
 </div>
